--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section>
         <h1>Images</h1>
         <div>
-            <img src="./image.jpg" alt="carregando">
+            <img src="./image.jpg" alt="carregando" width="200" height="300">
         </div>
     </section>
  
