--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section>
         <h1>Images</h1>
         <div>
-            <img src="./image.jpg" alt="carregando" width="200" height="300">
+            <img src="./image.jpg" alt="carregando">
             <video src="./20171118_140126.jpg - Frame Interpolation (1).mp4" autoplay loop height="130" width="200">ola</video>
         </div>
     </section>
