--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <section>
         <h1>Images</h1>
         <div>
-            <img src="./image.jpg" alt="carregando">
-            <video src="./20171118_140126.jpg - Frame Interpolation (1).mp4" autoplay loop height="130" width="200">ola</video>
+            <img src="./image.jpg" alt="carregando" height="500" width="500">
+            <video src="./20171118_140126.jpg - Frame Interpolation (1).mp4" autoplay loop height="500" width="500">ola</video>
         </div>
     </section>
  
