--- a/index.html
+++ b/index.html
@@ -14,8 +14,49 @@
     <section>
         <h1>Images</h1>
         <div>
-            <img src="./image.jpg" alt="carregando" height="500" width="500">
-            <video src="./20171118_140126.jpg - Frame Interpolation (1) (1).mp4" autoplay loop height="500" width="500">ola</video>
+            
+        </div>
+        <div>
+            <h1>hora da ingestão</h1>
+            <p>19:09 ingeri o lemon tek</p>
+            <p>comecei a sentir algo apos jogar um jogo de wreidcore de roblox 19:25</p>
+            <p>comecei a sentir, terminei de jogar o jogo psicodelico foi uma viagem ksksks</p>
+            <h1>Efeitos</h1>
+            <p>começo a ver os padões das coisas se derretendo em outros padroes como se ondulassem e formassem outras coisas, mandalas em movimento : 19:40</p>
+            <p>19:59 vejo a foto de um video de musica, a foto parecia se mecher mas o video estava pausado, como se as condas da agua tivessem seguindo um fluxo</p>
+            <p>eu ainda veja padrão nas coisas e tals, mas sigo o dia normalmente, cuidando das coisas e documentando isso aqui, vou meditar um pouco depois de ver um video</p>
+            <p>agora esses padrões se eu parar pra observar formam figuras de deuses 20:02
+                (lembrando que estou vendo eles enquanto escrevo isso no monitor risos)
+            </p>
+            <p>alem disso uma sensação de gratidão e felicidade toma conta de mim nunca esquecerei</p>
+            <h3>meditação(tentei)</h3>
+            <p>vejo uma mistura de formatos indescritiveis</p>
+            <p>me confundi por conta de uma opção de horario de verao no windows 7 mas fora isso tudo bem</p>
+            <p>fui na cozinha fazer umas coisas e tive insights de entedides me visitando, mas de uma forma amigavel, eu estava sempre alegre afinal</p>
+            <h1>no quarto</h1>
+            <p>sinto uma sensação estranha e parece que tudo que eu mantenho o foco ganha vida que logo apos se perde ao desfocar</p>
+            <p>como se estivesse outras dimensoes alem dessa ao mesmo tempo que essa, dimensoes totalmente diferentes da nossa</p>
+            <p> mas que de alguma forma enfluenciam a nossa, e só percebe quem quer.</p>
+            <p>meditando percebi que nós somos tudo, tudo o que vemos e criamos, tudo isso significa alguma coisa nossa missão é melhorar isso tudo</p>
+            <p>oque quer dizer que não existe deus como é dito, estamos aqui com um proposito e a realidade é como nos vemos ela</p>
+            <h3>Reflxões</h3>
+            <h1>agora entrou o tema das 22:003</h1>
+            <p>logicamente isso é apenas parte do que eu presenciei, algumas coisas preciso de tempo pra interpretar, muitas "entidades" envolvidas</p>
+            <p>as vezes sinto algumas presenças ao meu redos mas sei que estou aqui sozinho</p>
+            <p>me sinto tipo um escritor agora kkkk, isso dava ate pra virar um podcast</p>
+            <p>tenho que estimular mais essa area, criatividade</p>
+            <p>eu percebi que tudo na vida requer esforço, estamos aqui pra ser esforçados, renovar e aprimor</p>
+            <p>até mesmo pegar a agua misturada, metade gelada e o resto quente, é um esforço mas vale a pena</p>
+            <p>me esforcei bastante pra escrever isso tambem enquanto cuido da casa e estou sob efeitos psicoativos e "sedantes" bem entre aspas </p>
+            <p>enfim esse é o meu documentario sobre como está sendo os efeitos, se eu fechar os olhos vou pra outro mundo, vou viajar um pouco até logo kkk</p>
+            <p>uma esperriencia muito unica mesmo, arruda da siria e cogumelos cubensis, tenham gratidao a natureza por esta medicina, que cresce em abundancia</p>
+            <p>O que é proibido pela ANVISA é a extração e isolamento da psilocibina, um dos princípios ativos, além de ser proibida qualquer manipulação em cápsulas sem registro na agência.
+                Então comprar cogumelos mágicos para pesquisa e coleções etnobotânicas não é proibido e não existe nenhum crime previsto em lei.</p>
+            <p>pode ser util no tratamento de varias doenças mentais, é proibido pois ja existem medicamentos regulados que tem eficacia comprovada por eles</p>
+            <p>que "viagem" longa</p>
+            <p>pequenas lutas, acabou. with love </p>
+            <p>23:58 acabou a maioria dos efeitos, apenas quando fecho os olhos agora</p>
+            
         </div>
     </section>
  
